--- a/package.json
+++ b/package.json
@@ -11,12 +11,14 @@
     "@react-native-community/masked-view": "0.1.6",
     "@react-navigation/drawer": "^5.5.1",
     "@react-navigation/native": "^5.1.7",
+    "axios": "^0.19.2",
     "expo": "~37.0.3",
     "expo-constants": "^9.0.0",
     "expo-linear-gradient": "^8.1.0",
     "react": "~16.9.0",
     "react-dom": "~16.9.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-37.0.1.tar.gz",
+    "react-native-avatar-gravatar": "0.0.4",
     "react-native-gesture-handler": "~1.6.0",
     "react-native-paper": "^3.8.0",
     "react-native-reanimated": "~1.7.0",
