--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "expo-constants": "^9.0.0",
     "expo-linear-gradient": "^8.1.0",
     "expo-mail-composer": "^8.1.0",
+    "lottie-react-native": "^3.3.2",
+    "moment": "^2.25.1",
     "react": "~16.9.0",
     "react-dom": "~16.9.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-37.0.1.tar.gz",
